--- a/index.html
+++ b/index.html
@@ -121,7 +121,9 @@
   
           </div>
         </a>
-      </div> <!--Termina-->
+      </div>
+      <div class="grafico grafico--pets"></div>
+      <div class="grafico grafico--node"></div>                 <!--Termina-->
     </div>
   </main>
   <footer class="footer">
