--- a/Nosotros.html
+++ b/Nosotros.html
@@ -26,9 +26,53 @@
   </nav>
   <main class="container navegacion_enlace--activo">
     <h1>Nosotros</h1>
+    <div class="Nosotros">
+      <div class="Nosotros_contenido" >
+        
+ ¿Por qué lo usamos?
+
+<p>Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño. El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". Estos textos hacen parecerlo un español que se puede leer. Muchos paquetes de autoedición y editores de páginas web usan el Lorem Ipsum como su texto por defecto, y al hacer una búsqueda de "Lorem Ipsum" va a dar por resultado muchos sitios web que usan este texto si se encuentran en estado de desarrollo. Muchas versiones han evolucionado a través de los años, algunas veces por accidente, otras veces a propósito (por ejemplo insertándole humor y cosas por el estilo).</p>
+
+<p>Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño. El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". Estos textos hacen parecerlo un español que se puede leer. Muchos paquetes de autoedición y editores de páginas web usan el Lorem Ipsum como su texto por defecto, y al hacer una búsqueda de "Lorem Ipsum" va a dar por resultado muchos sitios web que usan este texto si se encuentran en estado de desarrollo. Muchas versiones han evolucionado a través de los años, algunas veces por accidente, otras veces a propósito (por ejemplo insertándole humor y cosas por el estilo).</p>
+
+      </div>
+      <img class="Nosotros_imagen" src="img/dogo-argentino(1).png" alt="imagen Nosotros">
+    </div>
   </main>
   <footer class = "footer">
-    <p class="footer_texto">Todos los Derechos Rreservados</p>
+  <section class="footer_texto bloque_titulo">La importancia de adoptar</section>
+  <div class="bloques">
+    <div class="bloque">
+      <img src="img/perro(1).png" alt="Fundation">
+   
+      <h3 class="bloque_titulo">Mascotas</h3>
+      <p>Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño. El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de las letras</p>
+
+    </div>
+    <div class="bloque">
+      <img src="img/gato(1).png" alt="Fundation">
+   
+      <h3 class="bloque_titulo">Mascotas</h3>
+      <p>Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño. El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de las letras</p>
+
+    </div>
+    <div class="bloque">
+      <img src="img/malinois.png" alt="Fundation">
+   
+      <h3 class="bloque_titulo">Mascotas</h3>
+      <p>Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño. El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de las letras</p>
+
+    </div>
+    <div class="bloque footer_texto ">
+      <img src="img/gato-burmilla.png" alt="Fundation">
+   
+      <h3 class="bloque_titulo footer_texto">Mascotas</h3>
+      <p>Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño. El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de las letras</p>
+
+    </div>
+  </div>
+  <footer class = "footer">
+    <p class="footer_texto">Todos los Derechos Reservados</p>
   </footer>
 </body>
 </html>
